[package]
name = "stress"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
avail-base = { path = "../base", default-features = false }
frame-system = { path = "../pallets/system", default-features = false }
avail-core = { workspace = true, default-features = false }
kate = { workspace = true, default-features = false }

cfg-if = "1.0"
impl-trait-for-tuples = "0.2.1"
static_assertions = "1.1.0"
log = { version = "0.4.20", default-features = false }
rs_merkle = { version = "1.2.0", default-features = false, optional = true }
derive_more = { version = "0.99.17", default-features = false, features = ["from", "into"] }
once_cell = { version = "1.18" }
libm = { version = "0.2.1", default-features = false }
ethabi = { version = "18.0.0", default-features = false }

codec = { package = "parity-scale-codec", version = "3.6.1", default-features = false, features = ["derive"] }
scale-info = { version = "2.5.0", default-features = false, features = ["derive", "serde"] }
serde = { version = "1.0.195", default-features = false, features = ["derive", "alloc"], optional = true }
frame-support = { workspace = true, default-features = false }
sp-core = { workspace = true, default-features = false, features = ["serde"] }
sp-io = { workspace = true, default-features = false }
sp-runtime = { workspace = true, default-features = false, features = ["serde"] }
sp-std = { workspace = true, default-features = false }
sp-version = { workspace = true, default-features = false, features = ["serde"] }
sp-weights = { workspace = true, default-features = false, features = ["serde"] }
sp-runtime-interface = { workspace = true, default-features = false }
binary-merkle-tree = { workspace = true, default-features = false }
bounded-collections = { version = "0.2.0", default-features = false }

tokio = { version = "1.28.1", features = ["full"] }
